--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "chart.js": "^2.9.3",
+    "firebase": "^7.20.0",
     "material-table": "^1.69.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
